--- a/packaging/nuget/fubuvalidation.nuspec
+++ b/packaging/nuget/fubuvalidation.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <id>FubuMVC.Validation</id>
+    <id>FubuValidation</id>
     <version>0.0</version>
     <authors>Chad Myers, Jeremy D. Miller, Joshua Flanagan</authors>
     <owners>Joshua Flanagan</owners>
@@ -9,15 +9,15 @@
     <projectUrl>http://fubumvc.com</projectUrl>
     <iconUrl>https://github.com/DarthFubuMVC/fubumvc/raw/master/doc/logo/FubuMVC_Logo_package_icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A FubuMVC implementation of FubuValidation</description>
+    <description>FubuValidation - have validation your way, whatever way that happens to be</description>
     <tags>fubumvc mvc nhibernate</tags>
     <dependencies>
-      <dependency id="fubumvc.references" />
-      <dependency id="fubuvalidation" />
+      <dependency id="fubulocalization" />
+      <dependency id="htmltags" />
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\build\FubuMVC.Validation.*" target="lib" />
-    <file src="..\..\src\FubuMVC.Validation\**\*.cs" target="src" />
+    <file src="..\..\build\FubuValidation.*" target="lib" />
+    <file src="..\..\src\FubuValidation\**\*.cs" target="src" />
   </files>
 </package>
