--- a/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
+++ b/src/FubuMVC.Validation.Tests/FubuMVC.Validation.Tests.csproj
@@ -85,8 +85,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfiguredFubuContinuationResolverTester.cs" />
     <Compile Include="debugging.cs" />
     <Compile Include="FubuContinuationFailurePolicyTester.cs" />
+    <Compile Include="FubuContinuationModelResolverTester.cs" />
+    <Compile Include="FubuRequestInputModelResolverTester.cs" />
+    <Compile Include="LambdaFubuContinuationModelResolverTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleInputModel.cs" />
     <Compile Include="when_handling_validation_failure.cs" />
