Added sample validation project

--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\FubuMVC.Validation\packages.config" />
   <repository path="..\FubuMVC.Validation.Tests\packages.config" />
   <repository path="..\FubuValidation.Tests\packages.config" />
+  <repository path="..\FubuMVC.HelloValidation\packages.config" />
 </repositories>
