--- a/src/FubuMVC.HelloValidation/FubuMVC.HelloValidation.csproj
+++ b/src/FubuMVC.HelloValidation/FubuMVC.HelloValidation.csproj
@@ -6,12 +6,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1D14C442-9F90-4B28-B4F9-79CD6E1B6E40}</ProjectGuid>
+    <ProjectGuid>{42250192-9665-47BC-895B-940EB8869916}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FubuMVC.Validation</RootNamespace>
-    <AssemblyName>FubuMVC.Validation</AssemblyName>
+    <RootNamespace>FubuMVC.HelloValidation</RootNamespace>
+    <AssemblyName>FubuMVC.HelloValidation</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bottles">
-      <HintPath>..\packages\Bottles.0.9.0.102\lib\Bottles.dll</HintPath>
+      <HintPath>..\packages\Bottles.0.9.0.50940\lib\Bottles.dll</HintPath>
     </Reference>
     <Reference Include="FubuCore">
       <HintPath>..\packages\FubuCore.0.9.1.37\lib\FubuCore.dll</HintPath>
@@ -42,8 +42,14 @@
     <Reference Include="FubuLocalization">
       <HintPath>..\packages\FubuLocalization.0.9.1.37\lib\FubuLocalization.dll</HintPath>
     </Reference>
+    <Reference Include="FubuMVC.Conventions">
+      <HintPath>..\packages\FubuMVC.Conventions.0.1.0.52312\lib\FubuMVC.Conventions.dll</HintPath>
+    </Reference>
     <Reference Include="FubuMVC.Core">
       <HintPath>..\packages\FubuMVC.References.0.9.1.533\lib\FubuMVC.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FubuMVC.Spark">
+      <HintPath>..\packages\FubuMVC.Spark.0.9.1.531\lib\FubuMVC.Spark.dll</HintPath>
     </Reference>
     <Reference Include="FubuMVC.StructureMap">
       <HintPath>..\packages\FubuMVC.References.0.9.1.533\lib\FubuMVC.StructureMap.dll</HintPath>
@@ -52,11 +58,14 @@
       <HintPath>..\packages\HtmlTags.1.0.0.23\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
     <Reference Include="Ionic.Zip">
-      <HintPath>..\packages\DotNetZip.1.9\lib\Ionic.Zip.dll</HintPath>
+      <HintPath>..\packages\DotNetZip.1.9.1.8\lib\net20\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Spark">
+      <HintPath>..\packages\Spark.1.6\lib\NET40\Spark.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap.2.6.2\lib\StructureMap.dll</HintPath>
@@ -78,45 +87,55 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionCallExtensions.cs" />
-    <Compile Include="ConfiguredFubuContinuationResolver.cs" />
-    <Compile Include="ValidationContinuationDirector.cs" />
-    <Compile Include="FubuContinuationFailurePolicy.cs" />
-    <Compile Include="FubuContinuationModelResolver.cs" />
-    <Compile Include="FubuContinuationResolver.cs" />
-    <Compile Include="FubuRegistryValidationExtensions.cs" />
-    <Compile Include="FubuRequestInputModelResolver.cs" />
-    <Compile Include="FubuValidationEngine.cs" />
-    <Compile Include="HtmlConventionExtensions.cs" />
-    <Compile Include="IFubuContinuationModelDescriptor.cs" />
-    <Compile Include="IFubuContinuationModelResolver.cs" />
-    <Compile Include="IFubuContinuationResolver.cs" />
-    <Compile Include="IInputModelResolver.cs" />
-    <Compile Include="IValidationFailureHandler.cs" />
-    <Compile Include="IValidationFailurePolicy.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FubuMVCValidationException.cs" />
-    <Compile Include="Registration\ConfigureModelValidationFailureExpression.cs" />
-    <Compile Include="Registration\ValidationCallMatcher.cs" />
-    <Compile Include="Registration\ValidationCandidateExpression.cs" />
-    <Compile Include="Registration\ValidationFailureExpression.cs" />
-    <Compile Include="ValidationBehavior.cs" />
-    <Compile Include="ValidationConvention.cs" />
-    <Compile Include="ValidationFailure.cs" />
-    <Compile Include="ValidationFailureHandler.cs" />
-    <Compile Include="ValidationNode.cs" />
+    <Content Include="Global.asax" />
+    <Content Include="Shared\bindings.xml" />
+    <Content Include="Web.config" />
+    <Content Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="HandlerModelDescriptor.cs" />
+    <Compile Include="Handlers\HandlersMarker.cs" />
+    <Compile Include="Handlers\Products\Create\CreateProductInputModel.cs" />
+    <Compile Include="Handlers\Products\Create\CreateProductRequestModel.cs" />
+    <Compile Include="Handlers\Products\Create\CreateProductViewModel.cs" />
+    <Compile Include="Handlers\Products\Create\GetHandler.cs" />
+    <Compile Include="Handlers\Products\Create\PostHandler.cs" />
+    <Compile Include="Handlers\Products\GetHandler.cs" />
+    <Compile Include="Handlers\Products\IProductsRepository.cs" />
+    <Compile Include="Handlers\Products\Product.cs" />
+    <Compile Include="Handlers\Products\ProductsListRequestModel.cs" />
+    <Compile Include="Handlers\Products\ProductsRepository.cs" />
+    <Compile Include="HelloValidationFubuRegistry.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Handlers\Products\Create\Create.spark" />
+    <None Include="Handlers\Products\List.spark" />
+    <None Include="Shared\Application.spark" />
+    <None Include="Shared\_global.spark" />
+    <None Include="Shared\Notification.spark" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FubuMVC.Validation\FubuMVC.Validation.csproj">
+      <Project>{1D14C442-9F90-4B28-B4F9-79CD6E1B6E40}</Project>
+      <Name>FubuMVC.Validation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FubuValidation\FubuValidation.csproj">
       <Project>{D100D12E-9818-4578-B25E-C1EDA3477820}</Project>
       <Name>FubuValidation</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include=".package-manifest" />
-    <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
@@ -125,7 +144,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>18912</DevelopmentServerPort>
+          <DevelopmentServerPort>10494</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
