--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -5,4 +5,7 @@
   <repository path="..\FubuMVC.Validation.Tests\packages.config" />
   <repository path="..\FubuValidation.Tests\packages.config" />
   <repository path="..\FubuMVC.HelloValidation\packages.config" />
+  <repository path="..\FubuValidation.FluentValidation\packages.config" />
+  <repository path="..\FubuValidation.FluentValidation.Tests\packages.config" />
+  <repository path="..\FubuMVC.Validation.FluentValidation\packages.config" />
 </repositories>
