--- a/packaging/nuget/fubuvalidation.nuspec
+++ b/packaging/nuget/fubuvalidation.nuspec
@@ -6,8 +6,8 @@
     <authors>Joshua Arnold, Jeremy D. Miller, et al.</authors>
     <owners>Joshua Arnold, Jeremy D. Miller</owners>
     <licenseUrl>https://raw.github.com/DarthFubuMVC/fubuvalidation/master/license.txt</licenseUrl>
-    <projectUrl>http://fubumvc.com</projectUrl>
-    <iconUrl>https://github.com/DarthFubuMVC/fubumvc/raw/master/doc/logo/FubuMVC_Logo_package_icon.png</iconUrl>
+    <projectUrl>http://validation.fubu-project.org</projectUrl>
+    <iconUrl>https://github.com/DarthFubuMVC/fubu-collateral/raw/master/Icons/FubuValidation_256.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>FubuValidation - have validation your way, whatever way that happens to be</description>
     <tags>fubu validation fubumvc conventional</tags>
