query support for validation rules. refactored Validator to use query

--- a/src/FubuValidation.Tests/FubuValidation.Tests.csproj
+++ b/src/FubuValidation.Tests/FubuValidation.Tests.csproj
@@ -99,6 +99,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ValidationContextTester.cs" />
+    <Compile Include="ValidationQueryTester.cs" />
     <Compile Include="ValidationRegistryTester.cs" />
   </ItemGroup>
   <ItemGroup>
