--- a/src/FubuMVC.HelloValidation/FubuMVC.HelloValidation.csproj
+++ b/src/FubuMVC.HelloValidation/FubuMVC.HelloValidation.csproj
@@ -126,6 +126,10 @@
       <Project>{1D14C442-9F90-4B28-B4F9-79CD6E1B6E40}</Project>
       <Name>FubuMVC.Validation</Name>
     </ProjectReference>
+    <ProjectReference Include="..\FubuValidation.StructureMap\FubuValidation.StructureMap.csproj">
+      <Project>{833D0F4C-1D8A-491E-A966-E5F048A902A0}</Project>
+      <Name>FubuValidation.StructureMap</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FubuValidation\FubuValidation.csproj">
       <Project>{D100D12E-9818-4578-B25E-C1EDA3477820}</Project>
       <Name>FubuValidation</Name>
