updates core nuget references, floats fubucore and fubulocalization to keep CI in sync

--- a/ripple.config
+++ b/ripple.config
@@ -5,4 +5,10 @@
   <SourceFolder>src</SourceFolder>
   <BuildCommand>rake</BuildCommand>
   <FastBuildCommand>rake compile</FastBuildCommand>
+  <Floats>
+    <string>FubuCore</string>
+    <string>FubuLocalization</string>
+    <string>FubuMVC.References</string>
+    <string>FubuMVC.Spark</string>
+  </Floats>
 </ripple>
