--- a/src/FubuMVC.HelloValidation/packages.config
+++ b/src/FubuMVC.HelloValidation/packages.config
@@ -1,16 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bottles" version="0.9.1.124" />
-  <package id="Bottles" version="0.9.1.135" />
+  <package id="Bottles" version="0.9.1.171" />
   <package id="CommonServiceLocator" version="1.0" />
-  <package id="FubuCore" version="0.9.2.71" />
-  <package id="FubuCore" version="0.9.2.82" />
-  <package id="FubuLocalization" version="0.9.2.71" />
-  <package id="FubuLocalization" version="0.9.2.82" />
-  <package id="FubuMVC.References" version="0.9.1.570" />
-  <package id="FubuMVC.References" version="0.9.1.600" />
-  <package id="FubuMVC.Spark" version="0.9.1.600" />
+  <package id="FubuCore" version="0.9.4.105" />
+  <package id="FubuLocalization" version="0.9.4.105" />
+  <package id="FubuMVC.References" version="0.9.3.696" />
+  <package id="FubuMVC.Spark" version="0.9.3.696" />
   <package id="HtmlTags" version="1.0.0.23" />
+  <package id="HtmlTags" version="1.0.0.52" />
   <package id="Spark" version="1.6" />
   <package id="structuremap" version="2.6.3" />
 </packages>
