--- a/src/FubuMVC.Validation.Tests/packages.config
+++ b/src/FubuMVC.Validation.Tests/packages.config
@@ -6,6 +6,9 @@
   <package id="DotNetZip" version="1.9.1.8" />
   <package id="FubuCore" version="0.9.4.105" />
   <package id="FubuLocalization" version="0.9.4.106" />
+  <package id="FubuKayak" version="0.9.3.731" />
+  <package id="Serenity" version="0.9.3.731" />
+  <package id="StoryTeller" version="1.1.0.488" />
   <package id="FubuMVC.References" version="0.9.3.696" />
   <package id="FubuTestingSupport" version="0.9.4.105" />
   <package id="HtmlTags" version="1.0.0.23" />
