ripple updated all packages and made serenity float

--- a/ripple.config
+++ b/ripple.config
@@ -10,5 +10,6 @@
     <string>FubuLocalization</string>
     <string>FubuMVC.References</string>
     <string>FubuMVC.Spark</string>
+	<string>Serenity</string>
   </Floats>
 </ripple>
