Moving nugets forward such that monobuild can pick up proper debs

--- a/ripple.config
+++ b/ripple.config
@@ -6,10 +6,14 @@
   <BuildCommand>rake</BuildCommand>
   <FastBuildCommand>rake compile</FastBuildCommand>
   <Floats>
+    <string>Bottles</string>
     <string>FubuCore</string>
+    <string>FubuKayak</string>    
     <string>FubuLocalization</string>
     <string>FubuMVC.References</string>
     <string>FubuMVC.Spark</string>
-	<string>Serenity</string>
+    <string>FubuTestingSupport</string>
+    <string>HtmlTags</string>    
+    <string>Serenity</string>
   </Floats>
 </ripple>
